Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           name="lastname"
           placeholder="Your last name.."
         />
-        <label for="country">Country</label>
+        <label for="city">City</label>
         <select id="city" name="City">
           <option value="colombo">Colombo</option>
           <option value="rathnapura">Rathnapura</option>
